...
            value={title}
            onChange={setTitle}
            placeholder="Call mom"
          />
        </p>
        <p>
          <label htmlFor="reminder-body">Details</label>
          <br />
          <MentionTextField
            id="reminder-body"
            name="body"
            value={body}
            onChange={setBody}
...
